# Terminal_GTKmm

./: CMakeLists.txt  README.md
Terminal_GTKmm/: CMakeLists.txt
Terminal_GTKmm/include/: interpreter.hpp  terminal.hpp
Terminal_GTKmm/src/: interpreter.cpp  main.cpp  terminal.cpp
include/: terminal.hpp
src/: CMakeLists.txt  main.cpp  terminal.cpp  terminal.h
